--- a/about.html
+++ b/about.html
@@ -4,5 +4,13 @@ layout: default
 
 <div class="about">
 <br>
-You can edit about.html to custom this.
+web developer,junior programmer
+<br>
+Lat/Long 39.9"N,116. 3"E
+<br>
+Now studying EE/Power in BJTU
+<br>
+Interested in Full-Stack,Meachine Learing
+<br>
+Having a wonderful and firm relationship with closuer
 </div>
